наброски API & CLI
